# moveit2_workshop

./: README.md  dependencies_rolling.repos
moveit2_workshop/: CMakeLists.txt  package.xml
moveit2_workshop_app/: CMakeLists.txt  package.xml
moveit2_workshop_app/src/: app_marker.cpp  app_simple.cpp
moveit2_workshop_bringup/: CMakeLists.txt  package.xml
moveit2_workshop_bringup/config/: camera_node_params.yaml  camera_params.yaml
moveit2_workshop_bringup/config/app/: dummy_app_marker.yaml  dummy_app_simple.yaml
moveit2_workshop_bringup/config/app/panda/: app_marker.yaml  app_simple.yaml  rviz.rviz
moveit2_workshop_bringup/config/app/ur5e_cell/: app_marker.yaml  app_simple.yaml
moveit2_workshop_bringup/config/marker_detection/: aruco_node_params.yaml  camera_node_params.yaml  camera_tf.yaml
moveit2_workshop_bringup/launch/: dummy_app_marker.launch.py  dummy_app_simple.launch.py  full_demo.launch.py  marker_detection.launch.py  ur5e_cell_app_marker.launch.py  ur5e_cell_app_simple.launch.py
moveit2_workshop_bringup/launch/includes/: marker_detection.launch.py  panda_demo.launch.py
