<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit2_workshop</name>
  <version>1.0.0</version>
  <description>Metapackage for the workshop repository</description>
  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">kut</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit2_workshop_app</depend>
  <depend>moveit2_workshop_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
