<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit2_workshop_bringup</name>
  <version>1.0.0</version>
  <description>Package to hold all bringup launch and config files for the moveit2 workshop</description>
  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">kut</maintainer>
    <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit2_workshop_app</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
